# bogobarf

./: Cargo.toml  README.md
bogobarf/: Cargo.toml
bogobarf/src/: client.rs  connection.rs  fancyheader.rs  lib.rs  main.rs  message.rs  peer.rs  server.rs
bogobarf_cli/: Cargo.toml
bogobarf_cli/src/: main.rs
examples/python/: bogobarf.py  demo.py  listener.py  server.py  talker.py
examples/rust/listener/: Cargo.toml
examples/rust/listener/src/: main.rs
examples/rust/talker/: Cargo.toml
examples/rust/talker/src/: main.rs
rust/bogobarf/: Cargo.toml
rust/bogobarf/src/: bincodec.rs  client.rs  connection.rs  message.rs  peer.rs  server.rs
rust/bogobarf_cli/: Cargo.toml
rust/bogobarf_cli/src/: main.rs
rust/examples/listener/: Cargo.toml
rust/examples/listener/src/: main.rs
rust/examples/talker/: Cargo.toml
rust/examples/talker/src/: main.rs
