[package]
name = "bogobarf"
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

[dependencies]

bytes = "0.6"
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive" ] }
serde_cbor = "0.11"
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5", features = ["codec"] }

